[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { name = 'Daniele Arosio', email = 'darosio@duck.com' },
]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  'click <=8.2.1',
  'jpype1 <= 1.6.0',
  'lxml <=6.0.1',
  'numpy <= 2.2.6',
  'pims <=0.7',
  "setuptools",
  "scyjava <= 1.12.1",
  "bioio-bioformats <= 1.3.0",
  "readlif <= 0.6.6",
  "dask-image <=2024.5.3",
  "pyometiff <= 1.1.4",
]
description = "A project to read microscopy files."
keywords = [
  "Bioimage",
  "Image Analysis",
  "Metadata",
  "Open Microscopy",
  "Tiled Images",
]
license = "BSD-3-Clause"
name = "nima_io"
readme = "README.md"
requires-python = ">=3.10, <3.13"
version = "0.3.12"

[dependency-groups]
dev = [
  "git-cliff==2.10.0",
  "mdformat==0.7.22",
  "mdformat-gfm==0.4.1",
  "pylsp-mypy==0.7.0",
  "ruff==0.13.1",
  "python-lsp-ruff==2.2.2",
]
docs = [
  "autodocsumm==0.2.14",
  "bfio <=2.4.8",
  "ipykernel==6.30.1",
  "jupyter==1.1.1",
  "matplotlib <=3.10.6",
  "nbsphinx==0.9.7",
  "pydata-sphinx-theme==0.16.1",
  "scikit-image <= 0.25.2",
  "sphinx-autodoc-typehints<3.2", # TODO: wait nbsphinx
  "sphinx-click==6.1.0",
  "sphinx<8.2", # TODO: wait nbsphinx
  "sphinxcontrib-plantuml <= 0.31",
  "sphinxcontrib-plantuml==0.31",
]
tests = [
  "coverage[toml]>=7.10.6",
  "mypy>=1.18.2",
  "pandas-stubs>=2.3.2.250827",
  "pygments>=2.19.2", # color xdoctest
  "pytest>=8.4.2",
  "scipy-stubs<=1.16.2.0",
  "types-click>=7.1.8",
  "types-setuptools>=80.9.0.20250822",
  "xdoctest>=1.3.0",
]
lint = [
  "pre-commit==4.3.0",
]

[project.scripts]
imgdiff = "nima_io.__main__:imgdiff"

[project.urls]
"Bug Tracker" = "https://github.com/darosio/nima_io/issues"
Changelog = "https://github.com/darosio/nima_io/blob/main/CHANGELOG.md"
# Discussions = "https://github.com/darosio/nima_io/discussions"
Documentation = "https://nima-io.readthedocs.io"
"Github releases" = "https://github.com/darosio/nima_io/releases"
Homepage = "https://github.com/darosio/nima_io"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py"]
source = ["nima_io"]

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "clophfit"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
enable_error_code = ["redundant-expr", "truthy-bool"]
plugins = ["numpy.typing.mypy_plugin"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

# TODO: check
[tool.pydoclint]
check-class-attributes = false

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

# TODO: check
[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
# xfail_strict = true
# filterwarnings = ["ignore::DeprecationWarning", "ignore:OVER"]
filterwarnings = ["ignore::DeprecationWarning"]
log_cli_level = "INFO"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.ruff]
extend-exclude = ["scripts/"]
extend-include = ["*.ipynb"]
fix = true
force-exclude = true
line-length = 88
target-version = "py312" # TODO: check
unsafe-fixes = true
# Enable preview mode
preview = false

[tool.ruff.format]
docstring-code-format = true

# TODO: check
[tool.ruff.lint]
ignore = ["ISC001"]
select = [
  "A", # builtins
  "ANN", # typing annotation
  "ARG", # unused arguments
  "B", # bugbear
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DTZ", # dates
  "E", # pycodestyle
  "TRY", # exceptions
  "EM", # exceptions
  "ERA", # eradicate
  "F", # pyflakes
  "FBT", # boolean-trap
  "I", # isort
  "ICN", # import conventions (opinionated)
  "ISC", # implicit-str-concat
  "N", # pep8-naming
  "PD", # pandas-vet
  "PGH", # pygrep WAIT
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "Q", # quotes
  "RUF", # Ruff
  "S", # bandit XXX
  "SIM", # simplify
  "TID", # tidy-imports
  "UP", # pyupgrade
  "YTT", # 2020
  "W", # pycodestyle
]
isort.combine-as-imports = true
isort.force-single-line = false
isort.known-first-party = ["nima_io"]
isort.split-on-trailing-comma = true
mccabe.max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ERA", "N816", "S314"]
"__init__.py" = ["I002"] # don't need annotations
"tests/*" = ["PLR2004", "S101"]
"tests/test_cli.py" = [
  "S603", # Need to call a process as CliRunner and javabridge does not play well together
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
# Ignore all metadata fields inside .ipynb cells
extend-ignore-re = ["\"metadata\":\\s*\\{[^}]*\\}"]

[tool.typos.default.extend-words]
ND = "ND"
Nd = "Nd"
OME = "OME"
arange = "arange"
arosio = "Arosio"
thr = "thr"
