[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { name = 'Daniele Arosio', email = 'darosio@duck.com' },
]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "bioio>=3.2.0",
  "bioio-bioformats>=1.3.2",
  "bioio-lif>=1.4.2",
  "bioio-ome-tiff>=1.1.0",
  "bioio-tifffile>=1.3.0",
  "click>=8.3.1",
  "numpy>=2.4.2",
  "ome-types>=0.6.3",
  "xarray>=2025.12.0",
]
description = "A project to read microscopy files."
keywords = [
  "Bioimage",
  "Image Analysis",
  "Metadata",
  "Open Microscopy",
  "Tiled Images",
]
license = "BSD-3-Clause"
name = "nima_io"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.12"

[project.optional-dependencies]
zarr = [
  "bioio-ome-zarr>=3.2.2",
]
docs = [
  "bioio",
  "autodocsumm>=0.2.14",
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "myst-nb>=1.3.0",
  "pydata-sphinx-theme>=0.16.1",
  "pygments>=2.19.2",
  "scikit-image>=0.26.0",
  "sphinx-autodoc-typehints>=3.5.2",
  "sphinx-click>=6.2.0",
  "sphinx>=8.2.3",
  "sphinxcontrib-plantuml>=0.31",
]

[dependency-groups]
dev = [
  "git-cliff>=2.12.0",
  "mdformat>=1.0.0",
  "mdformat-gfm>=1.0.0",
  "pylsp-mypy>=0.7.1",
  "ruff>=0.15.1",
  "python-lsp-ruff>=2.3.0",
  "cruft>=2.16.0",
]
lint = [
  "pre-commit==4.5.1",
]
tests = [
  "coverage[toml]>=7.13.3",
  "mypy>=1.19.1",
  "pandas-stubs>=3.0.0.260204",
  "pygments>=2.19.2", # color xdoctest
  "pytest>=9.0.2",
  "scipy-stubs>=1.17.0.2",
  "types-click>=7.1.8",
  "types-setuptools>=80.10.0.20260124",
  "xdoctest>=1.3.0",
]

[project.scripts]
imgdiff = "nima_io.__main__:imgdiff"

[project.urls]
"Bug Tracker" = "https://github.com/darosio/nima_io/issues"
Changelog = "https://github.com/darosio/nima_io/blob/main/CHANGELOG.md"
# Discussions = "https://github.com/darosio/nima_io/discussions"
Documentation = "https://nima-io.readthedocs.io"
"Github releases" = "https://github.com/darosio/nima_io/releases"
Homepage = "https://github.com/darosio/nima_io"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py", "types.py"]
source = ["nima_io"]

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "nima_io"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
enable_error_code = ["redundant-expr", "truthy-bool"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

# TODO: check
[tool.pydoclint]
check-class-attributes = false

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-exclude = ["scripts/"]
extend-include = ["*.ipynb"]
fix = true
force-exclude = true
line-length = 88
target-version = "py311"
unsafe-fixes = true
# Enable preview mode
preview = false

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["ISC001"]
select = [
  "A", # builtins
  "AIR", # airflow
  "ANN", # typing annotation
  "ARG", # unused arguments
  "ASYNC",
  "B", # bugbear
  # "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DOC",
  "DTZ", # dates
  "E", # pycodestyle
  "EM", # exceptions
  "ERA", # eradicate
  "EXE",
  "F", # pyflakes
  "FA", # future annotations
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  # "G", # logging
  "I", # isort
  "ICN", # import conventions (opinionated)
  "INP", #inplict namespace
  "INT", #gettext
  "ISC", # implicit-str-concat
  # "LOG", # logging
  "N", # pep8-naming
  "NPY",
  "PD", # pandas-vet
  "PERF", # pperformance anti pattern
  "PGH", # pygrep WAIT
  "PIE",
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "PYI", #lint typeshed
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # private self
  "SLOT", # __slot__
  "T10", # debugger
  # "T20", # print
  "TC", # TYPE_CHECKING
  "TCH", # TYPE_CHECKING
  "TID", # tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # 2020
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["nima_io"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"] # don't need annotations
"docs/*" = ["INP"]
"*.ipynb" = ["ERA", "N816", "S314", "SLF001"]
"tests/*" = ["PLR2004", "S101"]
"tests/test_cli.py" = [
  "S603", # Need to call a process as CliRunner and javabridge does not play well together
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
extend-ignore-re = [
  "\"id\":\\s*\"[^\"]+\"", # Ignore specific patterns such as "id": "XXXX" in JSON
  "\"metadata\":\\s*\\{[^}]*\\}", # Ignore all metadata fields inside .ipynb cells
]


[tool.typos.default.extend-words]
ND = "ND"
Nd = "Nd"
OME = "OME"
arange = "arange"
arosio = "Arosio"
thr = "thr"
